fix Order Service's Kafka configuration
(cherry picked from commit 80b79e2406a8091265bc6d7c5221f6bdd8dffd3d)